fix home buttons alignment

--- a/assets/css/pages/Home.css
+++ b/assets/css/pages/Home.css
@@ -17,6 +17,7 @@
 
 
 
+
  .apps-menu {
      display: grid;
      grid-auto-flow: column;
@@ -25,7 +26,6 @@
 
      .mail-logo {
          justify-self: center;
-
          font-size: 2.5rem;
          font-weight: 700;
          color: #425a7f;
@@ -33,6 +33,7 @@
          align-items: center;
          gap: 0.5rem;
          padding: 15px;
+         height: 90px;
      }
 
      .note-logo {
@@ -45,6 +46,7 @@
          align-items: center;
          gap: 0.5rem;
          padding: 15px;
+         height: 90px;
      }
 
      .note-logo:hover,
